--- a/SitePlante/pageprincipale/templates/profil.html
+++ b/SitePlante/pageprincipale/templates/profil.html
@@ -1,34 +1,36 @@
 {% extends "pagedebase.html" %}
-{% block title %} Page d'accueil {% endblock %}
-
+{% block title %} Profil {% endblock %}
 {% block content %}
 
     <main>
-        <section id="accueil" class="hero">
-            <h1>Bonjour à vous {{ logged_user.pseudo}} !Cultivez votre jardin intérieur</h1>
-            <p>Découvrez l'art du jardinage et créez votre propre oasis de verdure</p>
-        </section>
+        <br>
+        <br>
+        <br>
+        <h2> Vos informations</h2>
+        <p> Votre pseudo : {{ logged_user.pseudo}} </p>
+        <p> Votre adresse : {{ logged_user.adresse}} </p>
+        <p> Vous êtes un pro: {{ logged_user.is_pro}} </p>
 
         <section id="plantes" class="plants-grid">
-            <h2>Nos Plantes Vedettes</h2>
-            <div class="plant-cards">
-                <div class="plant-card">
-                    <img src="https://images.unsplash.com/photo-1520412099551-62b6bafeb5bb?w=500&auto=format" alt="Monstera">
-                    <h3>Monstera</h3>
-                    <p>Plante tropicale facile d'entretien</p>
-                </div>
-                <div class="plant-card">
-                    <img src="https://images.unsplash.com/photo-1593691509543-c55fb32e7355?w=500&auto=format" alt="Cactus">
-                    <h3>Cactus</h3>
-                    <p>Parfait pour les débutants</p>
-                </div>
-                <div class="plant-card">
-                    <img src="https://images.unsplash.com/photo-1512428813834-c702c7702b78?w=500&auto=format" alt="Fougère">
-                    <h3>Bonzai</h3>
-                    <p>Apporte une touche de fraîcheur</p>
-                </div>
+        <h2>Vos plantes</h2>
+        <div class="plant-cards">
+            {% for plante in plantes_utilisateur %}
+            <div class="plant-card">
+                {% if plante.photo_plante %}
+                <img src="{{ plante.photo_plante.url }}" alt="{{ plante.nom_plante }}">
+                {% else %}
+                <img src="https://via.placeholder.com/150" alt="{{ plante.nom_plante }}">
+                {% endif %}
+                <h3>{{ plante.nom_plante }}</h3>
+                <p>Plante tropicale facile d'entretien</p>
             </div>
-        </section>
+            {% empty %}
+            <p>Vous n'avez pas encore ajouté de plantes.</p>
+            {% endfor %}
+        </div>
+            <a href="{% url 'creer_plante' %}" class="btn btn-primary">Ajouter une nouvelle plante</a>
+    </section>
+
 
         <section id="conseils" class="tips">
             <h2>Conseils de Jardinage</h2>
