--- a/SitePlante/pageprincipale/templates/pagedebase.html
+++ b/SitePlante/pageprincipale/templates/pagedebase.html
@@ -4,6 +4,7 @@
 
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +15,25 @@
     </script>
 </head>
 <body>
+{% block headerContent %}
     <header>
-       {% block headerContent %}{% endblock %}
+       <nav>
+            <div class="logo">GreenThumb 🌱</div>
+            <ul>
+                <li><a href="{% url 'index' %}">Accueil</a></li>
+                <li><a href="#plantes">Demande de garde </a></li>
+                <li><a href="#conseils">Contact d'un specialiste</a></li>
+                <li><a href="{% url 'profil' %}">Profil</a></li>
+            </ul>
+        </nav>
     </header>
-    {% block content %}{% endblock %}
+ {% endblock %}
+    {% block content %}
+    {% endblock %}
+    <BR>
+    <BR>
+    <BR>
+    <BR>
     <footer>
         <p>&copy; 2024 GreenThumb</p>
     </footer>
