--- a/SitePlante/pageprincipale/templates/pagedebase.html
+++ b/SitePlante/pageprincipale/templates/pagedebase.html
@@ -21,7 +21,7 @@
             <div class="logo">GreenThumb 🌱</div>
             <ul>
                 <li><a href="{% url 'index' %}">Accueil</a></li>
-                <li><a href="#plantes">Demande de garde </a></li>
+                <li><a href="{% url 'faire_demande' %}">Demande de garde </a></li>
                 <li><a href="#conseils">Contact d'un specialiste</a></li>
                 <li><a href="{% url 'profil' %}">Profil</a></li>
             </ul>
