--- a/SitePlante/pageprincipale/templates/pagedebase.html
+++ b/SitePlante/pageprincipale/templates/pagedebase.html
@@ -22,7 +22,8 @@
             <ul>
                 <li><a href="{% url 'index' %}">Accueil</a></li>
                 <li><a href="{% url 'faire_demande' %}">Demande de garde </a></li>
-                <li><a href="#conseils">Contact d'un specialiste</a></li>
+                <li><a href="{% url 'demande' %}">Demande d'aide</a></li>
+                <li><a href="{% url 'pro' %}">Contact d'un specialiste</a></li>
                 <li><a href="{% url 'profil' %}">Profil</a></li>
             </ul>
         </nav>
