--- a/SitePlante/pageprincipale/templates/garde.html
+++ b/SitePlante/pageprincipale/templates/garde.html
@@ -16,7 +16,7 @@
 {% if message.photo%}
 <img src="{{ message.photo.url }}">
 {% endif %}
-<p> {{message.text}} </p>
+<p> {{message.text}} , message de l'utilisateur {{logged_user.pseudo}}</p>
 <br><hr><br>
 {% endfor %}
 {% endblock %}
