--- a/SitePlante/pageprincipale/templates/pagedebase.html
+++ b/SitePlante/pageprincipale/templates/pagedebase.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenThumb - {% block title %}{% endblock %}</title>
+    <title>Arosaje {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://ajax.googleaois.com/ajax/libs/jquery/3.2.1/jquery.min.js">
 
