--- a/SitePlante/pageprincipale/templates/pageprincipale.html
+++ b/SitePlante/pageprincipale/templates/pageprincipale.html
@@ -5,8 +5,8 @@
 
     <main>
         <section id="accueil" class="hero">
-            <h1>Bonjour à vous {{ logged_user.pseudo}} !Cultivez votre jardin intérieur</h1>
-            <p>Découvrez l'art du jardinage et créez votre propre oasis de verdure</p>
+            <h1>Bonjour à vous {{ logged_user.pseudo}} ! Cultivez votre jardin intérieur.</h1>
+            <p>Découvrez l'art du jardinage et créez votre propre oasis de verdure !</p>
         </section>
 
         <section id="plantes" class="plants-grid">
