--- a/SitePlante/pageprincipale/templates/interactiv-map.html
+++ b/SitePlante/pageprincipale/templates/interactiv-map.html
@@ -3,7 +3,22 @@ intéractive{% endblock %} {% block content %}
 
 <br /><br /><br />
 
-<div id="map"></div>
+<h3 id="plantes-dispo">Gardes disponibles dans un rayon de 500 mètres:</h3>
+
+<div
+  id="plantes-list"
+  class="plantes-container"
+  style="display: flex; flex-wrap: wrap; gap: 1rem"
+></div>
+
+<div
+  id="no-data-message"
+  style="display: none; color: red; margin-bottom: 1rem"
+></div>
+
+<div id="map-parent">
+  <div id="map"></div>
+</div>
 
 <script>
   const markersData = JSON.parse("{{ markers_json|escapejs }}");
