--- a/SitePlante/pageprincipale/templates/rgpd.html
+++ b/SitePlante/pageprincipale/templates/rgpd.html
@@ -65,6 +65,6 @@
     <h2>Contact</h2>
     <p>Pour toute question concernant notre politique de confidentialité ou l'utilisation de vos données, veuillez nous contacter à l'adresse suivante : [votre adresse e-mail de contact].</p>
 
-    <p>Date de dernière mise à jour : [insérer la date]</p>
+    <p>Date de dernière mise à jour : 01/04/2025</p>
 </body>
 </html>
