mise à jour filtre back markers

--- a/SitePlante/pageprincipale/templates/interactiv-map.html
+++ b/SitePlante/pageprincipale/templates/interactiv-map.html
@@ -3,7 +3,7 @@ intéractive{% endblock %} {% block content %}
 
 <br /><br /><br />
 
-<h3 id="plantes-dispo">Gardes disponibles dans un rayon de 500 mètres:</h3>
+<h3 id="plantes-dispo">Adresses des plantes à garder :</h3>
 
 <div
   id="no-data-message"
