--- a/SitePlante/pageprincipale/templates/pagedebase.html
+++ b/SitePlante/pageprincipale/templates/pagedebase.html
@@ -1,26 +1,34 @@
 {%load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}" />
 
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A'rosa-je {% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    />
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+    ></script>
     <script type="text/javascript">
-      function changerMenu(){
+      function changerMenu() {
         if (nav.style.display === "flex") {
-            nav.style.display = "none";
+          nav.style.display = "none";
         } else {
-            nav.style.display = "flex";
-            nav.style.justifyContent = "center";
+          nav.style.display = "flex";
+          nav.style.justifyContent = "center";
         }
       }
     </script>
@@ -29,10 +37,35 @@
   <body>
     {% block headerContent %}
     <header>
-      <div class="logo" style="display: flex;justify-content: space-evenly;align-items: center"><div style="display:flex;align-items: center;justify-content:center;gap: 10px;"><img src="{% static 'icons/logoArosaj.png' %}"  width="32px">A'rosa-je</div><button onclick="changerMenu()"><img src="{% static 'icons/menu.png' %}" width="32px"></button></div>
+      <div
+        class="logo"
+        style="
+          display: flex;
+          justify-content: space-evenly;
+          align-items: center;
+        "
+      >
+        <div
+          style="
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+          "
+        >
+          <img
+            src="{% static 'icons/logoArosaj.png' %}"
+            width="32px"
+          />A'rosa-je
+        </div>
+        <button onclick="changerMenu()">
+          <img src="{% static 'icons/menu.png' %}" width="32px" />
+        </button>
+      </div>
       <nav id="nav">
         <ul>
           <li><a href="{% url 'index' %}">Accueil</a></li>
+          <li><a href="{% url 'filtered-garde-liste' %}">A proximité</a></li>
           <li><a href="{% url 'interactiv-map' %}">Carte</a></li>
           <li><a href="{% url 'faire_demande' %}">Demande de garde </a></li>
           <li><a href="{% url 'demande' %}">Demande d'aide</a></li>
