--- a/SitePlante/pageprincipale/templates/pageprincipale.html
+++ b/SitePlante/pageprincipale/templates/pageprincipale.html
@@ -5,7 +5,7 @@
 
     <main>
         <section id="accueil" class="hero">
-            <h1>Bonjour à vous {{ logged_user.pseudo}} ! Cultivez votre jardin intérieur.</h1>
+            <h1>Bonjour à vous {{ logged_user.username}} ! Cultivez votre jardin intérieur.</h1>
             <p>Découvrez l'art du jardinage et créez votre propre oasis de verdure !</p>
         </section>
 
