--- a/SitePlante/pageprincipale/templates/demandes_en_attente.html
+++ b/SitePlante/pageprincipale/templates/demandes_en_attente.html
@@ -5,7 +5,7 @@
 <ul>
     {% for demande in demandes %}
         <li>
-            Plante : {{ demande.plante.nom_plante }} - Demandeur : {{ demande.utilisateur_demandeur.pseudo }}
+            Plante : {{ demande.plante.nom_plante }} - Demandeur : {{ demande.utilisateur_demandeur.username }}
             <form action="{% url 'accepter_demande' demande.id %}" method="POST">
                 {% csrf_token %}
                 <button type="submit">Accepter</button>
