--- a/SitePlante/pageprincipale/templates/profil.html
+++ b/SitePlante/pageprincipale/templates/profil.html
@@ -7,7 +7,7 @@
         <br>
         <br>
         <h2> Vos informations</h2>
-        <p> Votre pseudo : {{ logged_user.username}} </p>
+        <p> Votre pseudo : {{ logged_user.username}} </p> <a href="{% url 'changer_nom'%}"><p>Changer de pseudo</p> </a>
         <p> Votre adresse : {{ logged_user.adresse}} </p> <a href="{% url 'changer_adresse'%}"><p>Changer adresse</p> </a>
         <p> Vous êtes un pro: {{ logged_user.is_pro}} </p>
 
