--- a/SitePlante/pageprincipale/templates/pagedebase.html
+++ b/SitePlante/pageprincipale/templates/pagedebase.html
@@ -69,7 +69,7 @@
           <li><a href="{% url 'interactiv-map' %}">Carte</a></li>
           <li><a href="{% url 'faire_demande' %}">Demande de garde </a></li>
           <li><a href="{% url 'demande' %}">Demande d'aide</a></li>
-          <li><a href="{% url 'pro' %}">Contact d'un specialiste</a></li>
+          <li><a href="{% url 'pro' %}">Chat bot AidPlant</a></li>
           <li><a href="{% url 'profil' %}">Profil</a></li>
         </ul>
       </nav>
